test_suite5/ALAN/test_suite/alan-2022-examples/failing/005500_mutation.alan
source g begin leave not H b end
